ribbit/tests/ui/mismatch_nonzero.stderr
error[E0277]: the trait bound `u16: ribbit::NonZero` is not satisfied
 --> tests/ui/mismatch_nonzero.rs:9:8
  |
9 |     a: crate::A,
  |        ^^^^^^^^ the trait `ribbit::NonZero` is not implemented for `u16`
  |
  = help: the following other types implement trait `ribbit::NonZero`:
            NonZero<i128>
            NonZero<i16>
            NonZero<i32>
            NonZero<i64>
            NonZero<i8>
            NonZero<u128>
            NonZero<u16>
            NonZero<u32>
          and $N others
note: required by a bound in `ribbit::private::assert_nonzero`
 --> src/lib.rs
  |
  |     pub const fn assert_nonzero<T>()
  |                  -------------- required by a bound in this function
...
  |         <T::Packed as crate::Unpack>::Raw: crate::NonZero,
  |                                            ^^^^^^^^^^^^^^ required by this bound in `assert_nonzero`
